--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.2
 defusedxml==0.7.1
-Django==3.2.25
+Django==5.2
 django-allauth==0.50.0
+django-countries==7.6.1
+django-crispy-forms==2.4
 idna==3.10
 oauthlib==3.2.2
+pillow==10.3.0
 pycparser==2.22
 PyJWT==2.10.1
 python3-openid==3.2.0
@@ -15,4 +18,5 @@ pytz==2025.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 urllib3==2.3.0
