--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 asgiref==3.8.1
-Django==5.2.1
-django-allauth==65.8.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.2
 defusedxml==0.7.1
+Django==5.2.1
+django-allauth==65.8.0
 django-countries==7.6.1
 django-crispy-forms==1.14.0
+django-widget-tweaks==1.5.0
+git-filter-repo==2.47.0
 idna==3.10
 oauthlib==3.2.2
 pillow==10.3.0
@@ -18,5 +20,6 @@ pytz==2025.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 sqlparse==0.5.3
+stripe==12.1.0
 typing_extensions==4.13.2
 urllib3==2.3.0
