--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==5.2.1
 django-allauth==65.8.0
 django-countries==7.6.1
 django-crispy-forms==1.14.0
+django-extensions==4.1
 django-widget-tweaks==1.5.0
 git-filter-repo==2.47.0
 idna==3.10
@@ -23,3 +24,4 @@ sqlparse==0.5.3
 stripe==12.1.0
 typing_extensions==4.13.2
 urllib3==2.3.0
+whitenoise==6.9.0
