--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.2
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==5.2.1
 django-allauth==65.8.0
 django-countries==7.6.1
@@ -11,11 +12,16 @@ django-crispy-forms==1.14.0
 django-extensions==4.1
 django-widget-tweaks==1.5.0
 git-filter-repo==2.47.0
+gunicorn==23.0.0
 idna==3.10
 oauthlib==3.2.2
+packaging==25.0
 pillow==10.3.0
+psycopg2==2.9.10
 pycparser==2.22
+pydotplus==2.0.2
 PyJWT==2.10.1
+pyparsing==3.2.3
 python3-openid==3.2.0
 pytz==2025.1
 requests==2.32.3
