--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ asgiref==3.8.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+cloudinary==1.44.0
 cryptography==44.0.2
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==5.2.1
 django-allauth==65.8.0
+django-cloudinary-storage==0.3.0
 django-countries==7.6.1
 django-crispy-forms==1.14.0
 django-extensions==4.1
@@ -26,6 +28,7 @@ python3-openid==3.2.0
 pytz==2025.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+six==1.17.0
 sqlparse==0.5.3
 stripe==12.1.0
 typing_extensions==4.13.2
